add todo list with redux

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>TODO list func style</title>
+  <title>TODO list redux</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="./style.css" rel="stylesheet">
@@ -25,15 +25,10 @@
     </div>
   </div>
 
-
-  <!-- <button onclick="store.dispatch(addTodo('Walk dog')); console.log(store.getState());">Add Walk Dog Todo</button> -->
-  <!-- <button onclick="store.dispatch(addAuthor('Billy Bob', 'Assistant Editor')); console.log(store.getState());">Add Billy Bob Author</button> -->
-
-
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/redux/4.0.4/redux.min.js"></script>
+  <script defer src="./main.js"></script>
   <script defer src="./reducers.js"></script>
   <script defer src="./state.js"></script>
   <script defer src="./action-creators.js"></script>
-  <script defer src="./main.js"></script>
 </body>
 </html>
